Entrega hasta ítem 3

--- a/aa1.ipynb
+++ b/aa1.ipynb
@@ -1745,7 +1745,15 @@
    "id": "93c02f8e-1109-4124-8475-e38c9143a534",
    "metadata": {},
    "source": [
-    "# Selección de características"
+    "# ¿Está balanceado el dataset?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec610979-c231-4878-97b0-9a24ba605661",
+   "metadata": {},
+   "source": [
+    "El dataset no está balanceado porque la variable independietne que queremos predecir tiene muchos valores iguales a $0$."
    ]
   },
   {
@@ -1765,12 +1773,28 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, mean_absolute_percentage_error"
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, mean_absolute_percentage_error\n",
+    "from math import sqrt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
+   "id": "1823ca01-0e83-4709-94ab-6b069a453198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def metricas(y_test, y_pred):\n",
+    "    print(\"R2:   %.2f\" % r2_score(y_test, y_pred))\n",
+    "    print(\"MSE:  %.2f\" % mean_squared_error(y_test, y_pred))\n",
+    "    print(\"RMSE: %.2f\" % sqrt(mean_squared_error(y_test, y_pred)))\n",
+    "    print(\"MAE:  %.2f\" % mean_absolute_error(y_test, y_pred))\n",
+    "    print(\"MAPE: %.2f\" % mean_absolute_percentage_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "57e86245-4946-45f7-b1e8-1b4b001c2bc1",
    "metadata": {},
    "outputs": [],
@@ -1786,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "17bb050f-3a35-48c0-a699-5e346fdfe492",
    "metadata": {},
    "outputs": [
@@ -1799,7 +1823,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "id": "51890dff-94a1-4f2e-aebb-02e3056955b5",
    "metadata": {},
    "outputs": [],
@@ -1821,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "id": "36816882-dd44-4ca4-9e21-81a67e7e4540",
    "metadata": {},
    "outputs": [
@@ -1829,30 +1853,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean squared error: 0.65\n"
+      "R2:   0.35\n",
+      "MSE:  0.65\n",
+      "RMSE: 0.81\n",
+      "MAE:  0.34\n",
+      "MAPE: 5.38\n"
      ]
     }
    ],
    "source": [
-    "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "f1227968-6fcd-48e7-8549-b6d2bead1b3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficient of determination: 0.35\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))"
+    "metricas(y_test, y_pred)"
    ]
   },
   {
@@ -1918,14 +1928,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean squared error: 0.66\n",
-      "Coefficient of determination: 0.34\n"
+      "R2:   0.34\n",
+      "MSE:  0.66\n",
+      "RMSE: 0.81\n",
+      "MAE:  0.32\n",
+      "MAPE: 4.95\n"
      ]
     }
    ],
    "source": [
-    "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))\n",
-    "print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))"
+    "metricas(y_test, y_pred)"
    ]
   },
   {
@@ -2032,12 +2044,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficient of determination: 0.35\n"
+      "R2:   0.35\n",
+      "MSE:  0.65\n",
+      "RMSE: 0.81\n",
+      "MAE:  0.34\n",
+      "MAPE: 5.37\n"
      ]
     }
    ],
    "source": [
-    "print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))"
+    "metricas(y_test, y_pred)"
    ]
   },
   {
@@ -2139,12 +2155,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficient of determination: 0.35\n"
+      "R2:   0.35\n",
+      "MSE:  0.65\n",
+      "RMSE: 0.81\n",
+      "MAE:  0.34\n",
+      "MAPE: 5.38\n"
      ]
     }
    ],
    "source": [
-    "print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))"
+    "metricas(y_test, y_pred)"
    ]
   },
   {
@@ -2243,12 +2263,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coefficient of determination: 0.35\n"
+      "R2:   0.35\n",
+      "MSE:  0.65\n",
+      "RMSE: 0.81\n",
+      "MAE:  0.34\n",
+      "MAPE: 5.38\n"
      ]
     }
    ],
    "source": [
-    "print(\"Coefficient of determination: %.2f\" % r2_score(y_test, y_pred))"
+    "metricas(y_test, y_pred)"
    ]
   }
  ],
