--- a/notebook_final.ipynb
+++ b/notebook_final.ipynb
@@ -3285,7 +3285,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "En este gráfico vemos que la variable `Humidity3pm` tiene una correlación positiva con la variable a predecir, lo que resulta lógica ya que entre más humedad haya entre la mañana y la tarde, probablemente más cantidad de lluvia caiga.\n",
+    "\n",
+    "Casos que son interesantes de analizar serían el de variables como `Pressure3pm`, `Sunshine`, `WindSpeed3pm` y `MinTemp` ya que entre más grandes son menos cantidad de lluvia predice el modelo.\n",
+    "\n",
+    "Las que estásn relaciondas a la presión atmosférica, luz del sol y temperatura pueden llegar a ser relaciones más obvias con la cantidad de lluvia. Sin embargo la dirección del viento total y las de las 3 pm se comportan de manera inversa, creemos que está relación podría llegar a explicarse con más variables relaciondas a la ubicación geográfica de cada ciudad, como por ejemplo la latitud y longitud, que son datos con los que no contamos en el dataset."
+   ]
   },
   {
    "cell_type": "code",
@@ -3311,6 +3317,13 @@
     "                            data=x_test_reg)\n",
     "\n",
     "shap.plots.bar(explanation_global_reg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta grafica nos muestra en promedio cuáles son los valores más importantes para la regresión lineal."
    ]
   },
   {
@@ -3536,23 +3549,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "580/580 [==============================] - 1s 749us/step - loss: 0.6635 - precision_50: 0.7512\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "['models/clasificacion_pipeline.joblib']"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
