--- a/notebook_final.ipynb
+++ b/notebook_final.ipynb
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para la direcciones viento elegimos llenarla con el valor siguiente válido ya que es dataset está ordenado por fecha."
+    "Para la direcciones viento elegimos llenarla con el valor siguiente válido ya que es dataset está ordenado por fecha y ciudad."
    ]
   },
   {
@@ -2886,6 +2886,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En la funcion objetivo del modelo de regresion vamos a definir los hiperametros que queremos para que el optimizar OPTUNA. Bueno con num_layers estamos sugeriendo(1, 5) el numero de capas ocultas que queremos, n_units_layer_{i} estamos sugeriendo la cantidad de neuronas en las capas ocultas(4, 128). Como es un problema de regresion lineal vamos a usar la funcion de activacion \"RELU\" que una funcion apropiada para los modelos de regresion,  usamos Adam como algorismo de optimizacion para ajustar los pesos de la red durante el entrenamiento. Ademas como funcion de perdida usamos el error cuadratico medio, que un metrica que se puede usar para ver el rendimiento del modelo comparando como el modelo rindo con los datos de entenamiento y test, aca podriamos haber susado HUBER LOSS que es una funcion que conbina propiedades del MSE y MAE. Otra cosa importante es que a la hora de crea el estudio optuna la direccion tiene que ser minimizar porque queremos que el error sea el minimo. A la hora de entrenar el modelo tenemos parametros como las epocas(que las fuimos cambaindo de 5 a 10 pero no hubo mejoras), el batch_size tambien lo variamos en 32 o 64 o 128 pero no hubo mejores despues en la metricas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
@@ -2907,6 +2914,13 @@
     "    optimizer=Adam(learning_rate=0.001),\n",
     "    loss='mean_squared_error',\n",
     "    metrics=['mean_squared_error'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Arriba creamos nuestra modelo de red neuronal con los mejores hiperprametros que obtuvimos de optuna. Y compilamos el modelo con las metricas que ya explicamos arriba."
    ]
   },
   {
@@ -2978,7 +2992,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vemos que la red neuronal muestra una mejora respecto al las regresiones lineales, aunque esta mejora de aproximadamente un $5\\%$ no es muy alta. Nuevamente deberíamos preguntarnos para el contexto de este problema si vale la pena aumentar la complejidad del modelo para aumentar tan poco la explicabilidad de los datos."
+    "Podemos ver que el r2 en entrenamiento es de 0.54 esto indica que el modelo explica aproximadamente el 54%  de la varianza en los datos de entrenamiento. \n",
+    "El Error Cuadratico Medio de 0.4555 en el conjunto de entrenamiento sugiere que, en promedio, los errores de prediccion al cuadrado en los datos de entrenamiento son 0.4555.\n",
+    "Pero vemos que el r2 en test es la mitad aproximadante que en el entrenamiento y el Error Cuadratico Medio es mas alto, entonces el modelo estaria ajutando bien el los datos de entrenamiento pero no tiene un buen rendimiento con los datos nuevos. Si bien en el modelo aplicamos aplicamos la tenica Dropout para evitar sobre ajuste y tambien hemos realizados cambios en el analisis e imputacion de datos para evitar fuga de datos y contaminacion de train y test. No hemos podidos llegar a una mejora en las metricas de testeo de nuestro modelo."
    ]
   },
   {
@@ -3024,7 +3040,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como el *trainig loss* baja a mayor cantidad de épocas, podemos decir que este modelo no está presenta *underfitting*, ya que el modelo se llega a ajustar correctamente a los datos del entrenamiento. También vemos que la curva de *validation loss* comienza baja y sigue bajando a medida que avanza el tiempo, esto nos puede dar un indicio de que el modelo está generalizando correctamente los datos que nunca vio."
+    "Como el trainig loss baja a mayor cantidad de épocas, podemos decir que este modelo no está presenta underfitting, ya que el modelo se llega a ajustar correctamente a los datos del entrenamiento. También vemos que la curva de validation loss comienza baja y sigue bajando a medida que avanza el tiempo, pero depues de 800 epocas el error de validacion no baja mas y queda estancado rango(0.85, 0.75) de valores en los cuales baja y sube. Mientras que el error de enrenamiento tiende a bajar hasta 0.40 aprox."
    ]
   },
   {
