--- a/notebook_final.ipynb
+++ b/notebook_final.ipynb
@@ -3107,6 +3107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En la optimizacoin de del modelo de clasificacion lo que cambianos es la funcion de perdida que usamos Entropia binaria cruzada, que se usa para los problemas de clasificacion, ademas la metrica que queremos que sea mas alta es la presicion, tambien por eso a la hora de crear el estudio optuna buscamos la maximizacion. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -3232,6 +3239,13 @@
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el entrenamiento del modelo de clasificacion pudimos notar que el error de validacion si bien arranca bajando depues de aproximadamente 800 epocas podemos ver que el error se estancaba en un rago de 0.55 , 0.43. Y que la presicion en validacion rapidamente llegaba a 1. Podemos ver tambien que el modelo en entrenamiento aprendia bien pero a la de predecir con datos nuevos no era lo esperado. Fuismo probando tecnicas para evitar el sobre ajuste, tecnica para  evitar la fuga de datos, tecnica para evitar lacontaminacion entre test y train en los datos, tambien hemos balancedo el data set la tecnica SMOTE que fue la que mejor resultado nos dio en los moldelos de regresion logistica. Esperabamos optener mejores metricas en cuanto la precision en este modelo de redes de calsificacion."
    ]
   },
   {
@@ -3677,13 +3691,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# explainer = shap.Explainer(model_reg,\n",
-    "#                            x_train_regre.values,\n",
-    "#                            feature_names=x_train_regre.columns)\n",
+    "explainer = shap.Explainer(model_reg,\n",
+    "                            x_train_regre.values,\n",
+    "                            feature_names=x_train_regre.columns)\n",
     "\n",
-    "# explanation = explainer(x_test_reg)\n",
+    "explanation = explainer(x_test_reg)\n",
     "\n",
-    "# shap.plots.beeswarm(explanation, max_display=None)"
+    "shap.plots.beeswarm(explanation, max_display=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El beeswarm plot nos permite visualizar cómo cada característica afecta las predicciones del modelo, indicando si su presencia (en valores altos) aumenta o disminuye la predicción y la fuerza de esta relación.\n",
+    "Vemos que cuando las variables Humidity3pm y WindGustSpeed  tengo un nivel mas alto la probabilidad de lluvia sera mayor. Ademas vemos cuando las variables WindGustDir y Pressure3pm tomen valores mas alto es mas posible que no llueva. "
    ]
   },
   {
@@ -3719,8 +3741,15 @@
     "# Obtén las explicaciones para x_test_reg\n",
     "explanation = explainer.shap_values(x_test_array)\n",
     "\n",
-    "# Plotea el gráfico de beeswarm\n",
+    "\n",
     "shap.summary_plot(explanation, x_test_array, feature_names=x_train_regre.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con este grafico vemos en promedio cuales son las variables mas importante para el  modelo. Este gráfico proporciona una visión general de la contribución de cada característica al proceso de predicción del modelo para todo el conjunto de datos. Vemo que la variable humedity3pm es la mas importe y despues wingusspeed y pressuere3pm. Ademas MaxTemp o Mintemp que uno puede llegar a presumier que sus influencias pueden ser altas a la hora de predecir, no estrian siendo tan importantes para el modelo.  "
    ]
   },
   {
@@ -3848,6 +3877,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con este grafico vemos en promedio cuales son las variables mas importante para el  modelo. Este gráfico proporciona una visión general de la contribución de cada característica al proceso de predicción del modelo para todo el conjunto de datos. Vemos que la variable humedity3pm, pressuere3pm y shushine son las mas importe. Ademas WindSpeed3pm y WindSpeed9am son las variables con menos relevacia para el modelo. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {},
@@ -3878,6 +3914,13 @@
     "explanation = explainer(x_test_clas)\n",
     "\n",
     "shap.plots.beeswarm(explanation, max_display=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vemos que a valores altos de Humidity3pm, valores bajos Pressure3pm y valores bajos de sunshine es mas probable que llueva. "
    ]
   },
   {
